--- a/index.html
+++ b/index.html
@@ -348,15 +348,15 @@ body{
 </head>
 <body>
 
-<a href="https://t.me/priyotoe" class="telegram-float" target="_blank" id="telegramLink">
+<a href="https://t.me/Arpan_17" class="telegram-float" target="_blank" id="telegramLink">
   <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Telegram_Messenger.png" alt="Telegram Logo">
   <div class="telegram-text">Join Our Group</div>
 </a>
 
 <div class="wrap" id="wrap">  
-  <div class="premium-banner" id="premiumBannerText">PRIYO TOE</div>
+  <div class="premium-banner" id="premiumBannerText">Arpan TOE</div>
   
-  <div class="creator-tag" id="creatorTag">Created by Supriyo</div>
+  <div class="creator-tag" id="creatorTag">Created by Arpan</div>
   <button class="start-btn" id="startBtn">⭐ Start Game</button>  
 
   <div class="board" id="board"></div>  
