--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ body{
 
 <a href="https://t.me/Arpan_17" class="telegram-float" target="_blank" id="telegramLink">
   <img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/Telegram_Messenger.png" alt="Telegram Logo">
-  <div class="telegram-text">Join Our Group</div>
+  <div class="telegram-text">Developer Contact</div>
 </a>
 
 <div class="wrap" id="wrap">  
